[project]
name = "langchain-app-01"
version = "0.1.0"
description = ""
authors = [
    {name = "Sardius",email = "0xsardius@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "langchain (>=0.3.18,<0.4.0)",
    "langchain-openai (>=0.3.4,<0.4.0)",
    "langchain-anthropic (>=0.3.7,<0.4.0)",
    "langchain-community (>=0.3.17,<0.4.0)",
    "langchainhub (>=0.1.21,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
